manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-app-ingress
  namespace: lifi-bird-stack
  annotations:
    ingress.kubernetes.io/protocol: http
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    -  http:
        paths:
          - path: /bird
            pathType: Prefix
            backend:
              service:
                name: lifi-get-bird
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-app-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/protocol: http
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3s-app-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/protocol: http
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  name: http-web
